--- a/css/style.scss
+++ b/css/style.scss
@@ -10,33 +10,39 @@ body {
   color: #f2f2f2;
 }
 
-.section {
-  margin: 0 auto;
-  width: fit-content;
+main {
   height: 100vh;
   display: flex;
-  flex-direction: column;
-  justify-content: center;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: center;
+}
 
+.weight,
+.height {
+  display: flex;
+  flex-direction: column;
   .title {
     margin: 0 0 20px;
-    text-align: center;
+    // text-align: center;
     font-weight: 500;
   }
 
-  .kg-value {
-    font-size: 1.3em;
-    padding: 8px;
+  .kg-value,
+  .meter-value {
+    font-size: 1em;
+    padding: 5px;
     border: none;
   }
 
   .btn {
     margin: 10px 0;
     padding: 5px 0;
-    font-size: 1em;
+    font-size: 0.9em;
     background: teal;
     color: white;
     border: none;
+    cursor: pointer;
   }
 
   .label {
@@ -48,11 +54,17 @@ body {
     opacity: 0;
   }
 
-  .weight-box {
+  .weight-box,
+  .height-box {
     margin: 10px 0;
     padding: 10px 5px;
     opacity: 0;
     user-select: none;
+    transition: all 350ms ease-out;
+
+    &.show {
+      opacity: 1;
+    }
 
     .subtitle {
       margin-bottom: 8px;
