--- a/css/style.css
+++ b/css/style.css
@@ -23,9 +23,28 @@ main {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+}
+
+.result {
+  width: 50vh;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20vh;
+  padding: 15px;
+  margin-bottom: 10vh;
+  border: 2px solid white;
+}
+
+.result h3 {
+  text-align: left;
+  padding-top: 5px;
+  font-weight: 500;
+}
+
+.result hr {
+  width: 50%;
+  margin: auto;
 }
 
 .weight,
