--- a/css/style.scss
+++ b/css/style.scss
@@ -15,7 +15,29 @@ main {
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
-  align-items: center;
+ 
+}
+
+.result{
+  width:50vh;
+  text-align:center;
+  margin-left: auto;
+  margin-right:auto;
+  margin-top:20vh;
+  padding:15px;
+  margin-bottom:10vh;
+  border: 2px solid white;
+  h3{
+    text-align:left;
+    padding-top:5px;
+    font-weight: 500;
+   
+  }
+  hr{
+    width:50%;
+    margin:auto;
+  }
+  
 }
 
 .weight,
